// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Conversion Step Base 1`] = `
<div>
  0.00 AUD
   =
   
  0.00 USD
</div>
`;

exports[`Storyshots Conversion Table Base 1`] = `
.c0,
.c0 th,
.c0 td {
  border: 1px solid black;
  border-collapse: collapse;
}

.c0 th {
  background-color: #ddd;
}

.c0 th,
.c0 td {
  padding: 2px 5px;
}

.c0 td.unity {
  opacity: 0.5;
}

.c0 td.numerical {
  font-weight: bold;
}

<table
  className="c0"
>
  <tbody>
    <tr>
      <th>
        /
      </th>
      <th>
        AUD
      </th>
      <th>
        CAD
      </th>
      <th>
        CNY
      </th>
      <th>
        CZK
      </th>
      <th>
        DKK
      </th>
      <th>
        EUR
      </th>
      <th>
        GBP
      </th>
      <th>
        JPY
      </th>
      <th>
        NOK
      </th>
      <th>
        NZD
      </th>
      <th>
        USD
      </th>
    </tr>
    <tr>
      <th>
        AUD
      </th>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="numerical"
      >
        0.8371
      </td>
    </tr>
    <tr>
      <th>
        CAD
      </th>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="numerical"
      >
        0.8711
      </td>
    </tr>
    <tr>
      <th>
        CNY
      </th>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="numerical"
      >
        0.1620
      </td>
    </tr>
    <tr>
      <th>
        CZK
      </th>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className=""
      >
        EUR
      </td>
      <td
        className="numerical"
      >
        0.0362
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        EUR
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        EUR
      </td>
    </tr>
    <tr>
      <th>
        DKK
      </th>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        EUR
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className="numerical"
      >
        0.1344
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        EUR
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        EUR
      </td>
    </tr>
    <tr>
      <th>
        EUR
      </th>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="numerical"
      >
        27.6028
      </td>
      <td
        className="numerical"
      >
        7.4405
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="numerical"
      >
        8.6651
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="numerical"
      >
        1.2315
      </td>
    </tr>
    <tr>
      <th>
        GBP
      </th>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="numerical"
      >
        1.5683
      </td>
    </tr>
    <tr>
      <th>
        JPY
      </th>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="numerical"
      >
        0.0083
      </td>
    </tr>
    <tr>
      <th>
        NOK
      </th>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        EUR
      </td>
      <td
        className=""
      >
        EUR
      </td>
      <td
        className="numerical"
      >
        0.1154
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        EUR
      </td>
    </tr>
    <tr>
      <th>
        NZD
      </th>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className=""
      >
        USD
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
      <td
        className="numerical"
      >
        0.7750
      </td>
    </tr>
    <tr>
      <th>
        USD
      </th>
      <td
        className="numerical"
      >
        1.1946
      </td>
      <td
        className="numerical"
      >
        1.1480
      </td>
      <td
        className="numerical"
      >
        6.1715
      </td>
      <td
        className=""
      >
        EUR
      </td>
      <td
        className=""
      >
        EUR
      </td>
      <td
        className="numerical"
      >
        0.8120
      </td>
      <td
        className="numerical"
      >
        0.6376
      </td>
      <td
        className="numerical"
      >
        119.9500
      </td>
      <td
        className=""
      >
        EUR
      </td>
      <td
        className="numerical"
      >
        1.2903
      </td>
      <td
        className="unity numerical"
      >
        1.0000
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Conversion Trail Base 1`] = `
<div>
  <div>
    12.00 AUD
     =
     
    10.00 USD
  </div>
  <div>
    10.00 USD
     =
     
    1000 JPY
  </div>
  <hr />
  <div>
    12.00 AUD
     =
     
    1000 JPY
  </div>
</div>
`;

exports[`Storyshots Currency Converter Base 1`] = `
.c0 {
  background-color: white;
  padding: 20px;
  border-radius: 4px;
  border: 1px solid #aaa;
}

.c1 {
  margin-right: 4px;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <input
      className="c1"
      name="base-amount"
      onChange={[Function]}
      type="text"
      value=""
    />
    <select
      name="base-currency"
      onChange={[Function]}
      value="AUD"
    >
      <option />
      <option
        value="AUD"
      >
        AUD
      </option>
      <option
        value="CAD"
      >
        CAD
      </option>
      <option
        value="CNY"
      >
        CNY
      </option>
      <option
        value="CZK"
      >
        CZK
      </option>
      <option
        value="DKK"
      >
        DKK
      </option>
      <option
        value="EUR"
      >
        EUR
      </option>
      <option
        value="GBP"
      >
        GBP
      </option>
      <option
        value="JPY"
      >
        JPY
      </option>
      <option
        value="NOK"
      >
        NOK
      </option>
      <option
        value="NZD"
      >
        NZD
      </option>
      <option
        value="USD"
      >
        USD
      </option>
    </select>
     to 
    <select
      name="term-currency"
      onChange={[Function]}
      value="AUD"
    >
      <option />
      <option
        value="AUD"
      >
        AUD
      </option>
      <option
        value="CAD"
      >
        CAD
      </option>
      <option
        value="CNY"
      >
        CNY
      </option>
      <option
        value="CZK"
      >
        CZK
      </option>
      <option
        value="DKK"
      >
        DKK
      </option>
      <option
        value="EUR"
      >
        EUR
      </option>
      <option
        value="GBP"
      >
        GBP
      </option>
      <option
        value="JPY"
      >
        JPY
      </option>
      <option
        value="NOK"
      >
        NOK
      </option>
      <option
        value="NZD"
      >
        NZD
      </option>
      <option
        value="USD"
      >
        USD
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Currency Converter Error 1`] = `
.c0 {
  background-color: white;
  padding: 20px;
  border-radius: 4px;
  border: 1px solid #aaa;
}

.c1 {
  margin-right: 4px;
}

.c2 {
  color: red;
  margin-top: 1rem;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <input
      className="c1"
      name="base-amount"
      onChange={[Function]}
      type="text"
      value=""
    />
    <select
      name="base-currency"
      onChange={[Function]}
      value="AUD"
    >
      <option />
      <option
        value="AUD"
      >
        AUD
      </option>
      <option
        value="CAD"
      >
        CAD
      </option>
      <option
        value="CNY"
      >
        CNY
      </option>
      <option
        value="CZK"
      >
        CZK
      </option>
      <option
        value="DKK"
      >
        DKK
      </option>
      <option
        value="EUR"
      >
        EUR
      </option>
      <option
        value="GBP"
      >
        GBP
      </option>
      <option
        value="JPY"
      >
        JPY
      </option>
      <option
        value="NOK"
      >
        NOK
      </option>
      <option
        value="NZD"
      >
        NZD
      </option>
      <option
        value="USD"
      >
        USD
      </option>
    </select>
     to 
    <select
      name="term-currency"
      onChange={[Function]}
      value="AUD"
    >
      <option />
      <option
        value="AUD"
      >
        AUD
      </option>
      <option
        value="CAD"
      >
        CAD
      </option>
      <option
        value="CNY"
      >
        CNY
      </option>
      <option
        value="CZK"
      >
        CZK
      </option>
      <option
        value="DKK"
      >
        DKK
      </option>
      <option
        value="EUR"
      >
        EUR
      </option>
      <option
        value="GBP"
      >
        GBP
      </option>
      <option
        value="JPY"
      >
        JPY
      </option>
      <option
        value="NOK"
      >
        NOK
      </option>
      <option
        value="NZD"
      >
        NZD
      </option>
      <option
        value="USD"
      >
        USD
      </option>
    </select>
  </div>
  <div
    className="c2"
  >
    Error: There was an error converting
  </div>
</div>
`;

exports[`Storyshots Currency Converter With Conversion 1`] = `
.c0 {
  background-color: white;
  padding: 20px;
  border-radius: 4px;
  border: 1px solid #aaa;
}

.c1 {
  margin-right: 4px;
}

.c2 {
  margin-top: 1rem;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <input
      className="c1"
      name="base-amount"
      onChange={[Function]}
      type="text"
      value=""
    />
    <select
      name="base-currency"
      onChange={[Function]}
      value="AUD"
    >
      <option />
      <option
        value="AUD"
      >
        AUD
      </option>
      <option
        value="CAD"
      >
        CAD
      </option>
      <option
        value="CNY"
      >
        CNY
      </option>
      <option
        value="CZK"
      >
        CZK
      </option>
      <option
        value="DKK"
      >
        DKK
      </option>
      <option
        value="EUR"
      >
        EUR
      </option>
      <option
        value="GBP"
      >
        GBP
      </option>
      <option
        value="JPY"
      >
        JPY
      </option>
      <option
        value="NOK"
      >
        NOK
      </option>
      <option
        value="NZD"
      >
        NZD
      </option>
      <option
        value="USD"
      >
        USD
      </option>
    </select>
     to 
    <select
      name="term-currency"
      onChange={[Function]}
      value="AUD"
    >
      <option />
      <option
        value="AUD"
      >
        AUD
      </option>
      <option
        value="CAD"
      >
        CAD
      </option>
      <option
        value="CNY"
      >
        CNY
      </option>
      <option
        value="CZK"
      >
        CZK
      </option>
      <option
        value="DKK"
      >
        DKK
      </option>
      <option
        value="EUR"
      >
        EUR
      </option>
      <option
        value="GBP"
      >
        GBP
      </option>
      <option
        value="JPY"
      >
        JPY
      </option>
      <option
        value="NOK"
      >
        NOK
      </option>
      <option
        value="NZD"
      >
        NZD
      </option>
      <option
        value="USD"
      >
        USD
      </option>
    </select>
  </div>
  <div
    className="c2"
  >
    <div>
      <div>
        1.00 USD
         =
         
        2.00 AUD
      </div>
      <div>
        2.00 AUD
         =
         
        100 JPY
      </div>
      <hr />
      <div>
        1.00 USD
         =
         
        100 JPY
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Currency Selector Base 1`] = `
<select>
  <option />
  <option
    value="AUD"
  >
    AUD
  </option>
  <option
    value="CAD"
  >
    CAD
  </option>
  <option
    value="CNY"
  >
    CNY
  </option>
  <option
    value="CZK"
  >
    CZK
  </option>
  <option
    value="DKK"
  >
    DKK
  </option>
  <option
    value="EUR"
  >
    EUR
  </option>
  <option
    value="GBP"
  >
    GBP
  </option>
  <option
    value="JPY"
  >
    JPY
  </option>
  <option
    value="NOK"
  >
    NOK
  </option>
  <option
    value="NZD"
  >
    NZD
  </option>
  <option
    value="USD"
  >
    USD
  </option>
</select>
`;

exports[`Storyshots Currency Selector Controlled 1`] = `
<select
  value="AUD"
>
  <option />
  <option
    value="AUD"
  >
    AUD
  </option>
  <option
    value="CAD"
  >
    CAD
  </option>
  <option
    value="CNY"
  >
    CNY
  </option>
  <option
    value="CZK"
  >
    CZK
  </option>
  <option
    value="DKK"
  >
    DKK
  </option>
  <option
    value="EUR"
  >
    EUR
  </option>
  <option
    value="GBP"
  >
    GBP
  </option>
  <option
    value="JPY"
  >
    JPY
  </option>
  <option
    value="NOK"
  >
    NOK
  </option>
  <option
    value="NZD"
  >
    NZD
  </option>
  <option
    value="USD"
  >
    USD
  </option>
</select>
`;

exports[`Storyshots Fullscreen Center Base 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
>
  Example centered
</div>
`;

exports[`Storyshots Holding Display Base 1`] = `"1.23 AUD"`;
